--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 	<name>JPAExample</name>
 	<description>Demo project for Spring Boot</description>
 
-	<parent>
+	<patent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent itest from repository -->
 	</parent>
 
 	<properties>
